# remill

./: .gitignore  CMakeLists.txt
remill/Arch/: Arch.cpp  Arch.h  Instruction.cpp  Instruction.h  Name.cpp  Name.h
remill/Arch/AArch64/: Arch.cpp  Arch.h
remill/Arch/AArch64/Runtime/: BasicBlock.cpp  CMakeLists.txt  Instructions.cpp  Operators.h  State.h  Types.h
remill/Arch/AArch64/Semantics/: BINARY.cpp  BRANCH.cpp  CALL_RET.cpp  DATAXFER.cpp  MISC.cpp
remill/Arch/ARM/: Arch.cpp  Arch.h
remill/Arch/ARM/Runtime/: BasicBlock.cpp  CMakeLists.txt  Instructions.cpp  Operators.h  State.h  Types.h
remill/Arch/ARM/Semantics/: BINARY.cpp  CALL_RET.cpp  DATAXFER.cpp  FLAGS.cpp
remill/Arch/Capstone/: ARMDisassembler.cpp  ARMDisassembler.h  CapstoneDisassembler.cpp  CapstoneDisassembler.h  MipsDisassembler.cpp  MipsDisassembler.h
remill/Arch/Mips/: Arch.cpp  Arch.h  Disassembler.cpp  Disassembler.h
remill/Arch/Mips/Runtime/: BasicBlock.cpp  CMakeLists.txt  Common.cpp  Common.h  Instructions.cpp  Operators.h  State.h  Types.h
remill/Arch/Mips/Runtime/Semantics/: ADDIU.cpp  SW.cpp
remill/Arch/Mips/Semantics/: ARITHMETIC.cpp
remill/Arch/Runtime/: Definitions.h  HyperCall.h  Operators.h
remill/Arch/X86/: Arch.cpp  Arch.h
remill/Arch/X86/Runtime/: CMakeLists.txt
remill/BC/: Lifter.cpp  Lifter.h  Util.cpp
scripts/: build.sh
tests/X86/: Lift.cpp
tools/mips/mipsdec/: CMakeLists.txt
tools/mips/mipsdec/src/: elfparser.cpp  elfparser.h  main.cpp
tools/testdec/: CMakeLists.txt
tools/testdec/src/: elfparser.cpp  elfparser.h  main.cpp
tools/testsem/: CMakeLists.txt
tools/testsem/src/: main.cpp  utils.cpp  utils.h
